fix layout issue in 'bottom-sheet-content' component.

--- a/src/app/shared/bottom-sheet-content/bottom-sheet-content.component.scss
+++ b/src/app/shared/bottom-sheet-content/bottom-sheet-content.component.scss
@@ -1,72 +1,74 @@
 .content {
-    position: absolute;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: var(--bottom-sheet-wide-padding);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FFF;
+  padding-bottom: calc(var(--bottom-sheet-header-height) + 2rem);
+
+  .header {
+    width: 100%;
+    height: var(--bottom-sheet-header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .elements {
     width: 100%;
     height: 100%;
-    padding: var(--bottom-sheet-wide-padding);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    overflow-y: auto;
 
-    .header {
-      width: 100%;
-      height: var(--bottom-sheet-header-height);
+    .sound {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-    }
+      justify-content: space-between;
+      gap: 1.5rem;
+      padding: 1rem 0;
+      margin-bottom: 1rem;
 
-    .elements {
-        width: 100%;
-        min-height: calc(var(--bottom-sheet-body-height) - var(--bottom-sheet-header-height));
-        max-height: calc(var(--bottom-sheet-body-height) - var(--bottom-sheet-header-height));
-        overflow-y: auto;
+      .label {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: .5rem;
 
-        .audio {
-            --segment-height: 6rem;
-          
-            width: 100%;
-            height: var(--segment-height);
-            background-color: darkmagenta;
-            margin: auto;
-            margin-bottom: 1rem;
-          
-            display: flex; /* Make .audio a flexbox */
-            align-items: center;
-          
-            .icon {
-              flex: 0 0 var(--segment-height); /* Prevent resizing */
-              height: var(--segment-height);
-              width: var(--segment-height);
-              background-color: darkgreen;
-            }
-          
-            .volume {
-              flex: 1; /* Take up the remaining space */
-              height: 100%;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-          
-              input[type='range'] {
-                width: 90%;
-              }
-            }
-          
-            .action {
-              flex: 0 0 var(--segment-height); /* Prevent resizing */
-              height: var(--segment-height);
-              width: var(--segment-height);
-              background-color: darkgreen;
-              color: white;
-            }
-
-            .systemVolume {
-              flex: 0 0 var(--segment-height); /* Prevent resizing */
-              height: var(--segment-height);
-              width: var(--segment-height);
-              background-color: darkgreen;
-            }
+        .icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-right: 1.3rem;    
         }
-          
+
+        .name {
+          min-width: 12rem;
+          max-width: 12rem;
+          overflow-x: hidden;
+          text-wrap: nowrap;
+          text-overflow: ellipsis;
+
+          @media all and (min-width: 650px) {
+            min-width: 15rem;
+            max-width: 15rem;
+          }
+        }
+      }
+
+      .volume {
+        width: 100%;
+      }
+
+      .action {
+        margin-left: 3rem;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
     }
+  }
 }
